<resources>
    <string name="app_name">FarmaCode</string>
    <string name="app_logo">app logo</string>

    <!--onBoarding-->
    <string name="ob1_title">Easy Scanning</string>
    <string name="ob1_desc">Easily view patient and drug data with\nbarcode scans</string>
    <string name="ob1_logo_desc">on boarding 1 logo</string>
    <string name="ob2_logo_desc">on boarding 2 logo</string>
    <string name="ob2_title">Securing Patients</string>
    <string name="ob2_desc">Minimizing drug administration errors</string>
    <string name="ob3_logo_desc">on boarding 3 logo</string>
    <string name="ob3_title">User Friendly</string>
    <string name="ob3_desc">Has features that are easy for beginners to\noperate</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="data">Data</string>
    <string name="patient">Pasien</string>
    <string name="name">Nama:</string>
    <string name="age">Umur:</string>
    <string name="gender">Kelamin:</string>
    <string name="allergy">Alergi:</string>
    <string name="history">Riwayat Kesehatan:</string>
    <string name="diagnose">Diagnosis:</string>
    <string name="drug">Obat:</string>
    <string name="schedule">Jadwal:</string>
    <string name="scanner_button">scanner button</string>
    <string name="scanner_simulation">Simulasi Scanner</string>
    <string name="detail">Detail</string>
    <string name="obat">Obat</string>
    <string name="kandungan">Kandungan obat:</string>
</resources>