<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/drug_title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/detail"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/drug_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/obat"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/drug_title1"
            app:layout_constraintTop_toBottomOf="@+id/drug_title1" />

        <TextView
            android:id="@+id/drug_label_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/name"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/drug_title2"
            app:layout_constraintTop_toBottomOf="@+id/drug_title2" />

        <TextView
            android:id="@+id/drug_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            tools:text="Panadol"
            app:layout_constraintStart_toEndOf="@+id/drug_label_name"
            app:layout_constraintTop_toTopOf="@+id/drug_label_name" />

        <TableLayout
            android:id="@+id/drug_tb_contain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/drug_label_name">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#DB4437"
                android:paddingHorizontal="8dp"
                android:paddingVertical="8dp"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/drug_label_contain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kandungan"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#3faa"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/drug_contain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="8dp" />

            </TableRow>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>