<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/patient_title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/data"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/patient_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patient"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/patient_title1"
            app:layout_constraintTop_toBottomOf="@+id/patient_title1" />

        <TextView
            android:id="@+id/patient_label_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/name"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/patient_title2"
            app:layout_constraintTop_toBottomOf="@+id/patient_title2" />

        <TextView
            android:id="@+id/patient_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            tools:text="Supardi"
            app:layout_constraintStart_toEndOf="@+id/patient_label_name"
            app:layout_constraintTop_toTopOf="@+id/patient_label_name" />

        <TextView
            android:id="@+id/patient_label_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/age"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/patient_label_name"
            app:layout_constraintTop_toBottomOf="@+id/patient_label_name" />

        <TextView
            android:id="@+id/patient_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/patient_label_age"
            app:layout_constraintTop_toTopOf="@+id/patient_label_age"
            tools:text="21 Tahun" />

        <TextView
            android:id="@+id/patient_label_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/gender"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/patient_label_age"
            app:layout_constraintTop_toBottomOf="@+id/patient_label_age" />

        <TextView
            android:id="@+id/patient_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/patient_label_gender"
            app:layout_constraintTop_toTopOf="@+id/patient_label_gender"
            tools:text="Laki-laki" />

        <TableLayout
            android:id="@+id/patient_tb_allergy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/patient_label_gender">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp"
                android:paddingVertical="8dp"
                android:background="#DB4437"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/patient_label_allergy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/allergy"
                    android:textStyle="bold"
                    android:textColor="@color/white" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#3faa"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/patient_allergy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="8dp"
                    android:paddingHorizontal="8dp" />

            </TableRow>

        </TableLayout>

        <TableLayout
            android:id="@+id/patient_tb_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/patient_tb_allergy">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#4585F4"
                android:paddingHorizontal="8dp"
                android:paddingVertical="8dp"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/patient_label_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/history"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#3faa"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/patient_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="8dp" />

            </TableRow>

        </TableLayout>

        <TableLayout
            android:id="@+id/patient_tb_diagnose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/patient_tb_history">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#4A9D59"
                android:paddingHorizontal="8dp"
                android:paddingVertical="8dp"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/patient_label_diagnose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/diagnose"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#3faa"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/patient_diagnose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="8dp" />

            </TableRow>

        </TableLayout>

        <TableLayout
            android:id="@+id/patient_tb_drug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/patient_tb_diagnose">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#b45"
                android:paddingHorizontal="8dp"
                android:paddingVertical="8dp"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/patient_label_drug"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drug"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#3faa"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/patient_drug"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="8dp" />

            </TableRow>

        </TableLayout>

        <TableLayout
            android:id="@+id/patient_tb_schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/patient_tb_drug">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#3D5F73"
                android:paddingHorizontal="8dp"
                android:paddingVertical="8dp"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/patient_label_schedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/schedule"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#3faa"
                tools:ignore="UselessParent">

                <TextView
                    android:id="@+id/patient_schedule"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="8dp"
                    android:paddingVertical="8dp" />

            </TableRow>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>